# cosmic_calendar

./: Cargo.toml  README.md  Shuttle.toml  Trunk.toml  build.rs  index.html  justfile  output.css  package-lock.json  package.json  styles.css  tailwind.config.js
data/: README.md  earth_timezones.ron  earth_timezones.ron.bak  justfile
docs/: index.html  output-8c6ccc17c25081c6.css  theme-1665d895a0ec08af.js  zone-ui-7fd4fcf53c155a55deb5c522f52950b3507276d33e96abcda4bb667ab8dd6098fc00860fdd3eb2e65184e4320c07b73f.js  zone-ui-7fd4fcf53c155a55deb5c522f52950b3507276d33e96abcda4bb667ab8dd6098fc00860fdd3eb2e65184e4320c07b73f_bg.wasm
docs/data/: celestial_timezones.ron
public/icons/: README.md
scripts/: theme.js
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  components.rs  example1.rs  interfaces.rs  lib.rs  main.rs  wrappers.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: about.rs  atoms.rs  card.rs  cells.rs  charts.rs  download.rs  footer.rs  home.rs  laboratories.rs  links.rs  molecules.rs  navbar.rs  notfound.rs  organisms.rs  search.rs  theme.rs  tool.rs  tools.rs
src/components/about/: description.rs
src/components/atoms/: charts.rs  links.rs  tooltips.rs
src/components/atoms/charts/: clock.rs
src/components/atoms/links/: navbar.rs
src/components/card/: calendar.rs  celestial.rs  earth.rs  space_dates.rs
src/components/charts/: gauge_search.rs  longitude_gauge.rs
src/components/controller/: earth.rs
src/components/footer/: largescreen.rs  links.rs  smallscreen.rs
src/components/links/: largescreen.rs  smallscreen.rs
src/components/molecules/: cards.rs  headers.rs  navbars.rs  sidebars.rs
src/components/molecules/cards/: home.rs  info.rs
src/components/molecules/dashboards/: data.rs  date.rs  home.rs  info.rs  settings.rs  timezone.rs
src/components/molecules/footers/: dashboard.rs
src/components/molecules/headers/: dashboard.rs
src/components/molecules/navbars/: app.rs  dashboard.rs
src/components/molecules/sidebars/: dashboard.rs
src/components/navbar/: largescreen.rs  links.rs  smallscreen.rs
src/components/organisms/: about.rs  dashboard.rs  download.rs  home.rs  notfound.rs
src/components/search/: beta_cal.rs  calendar.rs  celestial.rs  earth.rs  generic.rs
src/components/theme/: largescreen.rs  smallscreen.rs  switch.rs
src/components/tool/: timezones.rs
src/components/tools/: asteroids.rs  ctz.rs  ctz_traits.rs  display.rs  innerplanets.rs  local_storage.rs  mainboard.rs  moons.rs  more_info.rs  outerplanets.rs
src/components/tools/innerplanets/: earth.rs
src/components/tools/mainboard/: custom_calendar.rs  earth_date_session.rs  earth_tz_session.rs
src/interfaces/: alloys.rs  ceramics.rs  composites.rs  microscopy.rs  polymers.rs  system.rs
src/interfaces/ceramics/: traditional.rs
src/interfaces/composites/: media_queries.rs
src/wrappers/: canva.rs  date.rs  ron_stuff.rs  routes.rs  strings.rs  theme.rs  time_offsets.rs  web.rs
styles/: README.md  animation.css  colors.css  hover_animation.css  input.css  output.css  responsive.css  styles.txt  theme.css  webkit.css
styles/atoms/: buttons.css
styles/cells/: theme.css
styles/laboratory/: responsive.css
unclean/: about.rs  card.rs  controller.rs  download.rs  header.rs  tools.rs
unclean/charts/: longitude_gauge.rs
unclean/controller/: celestial.rs  earth.rs
unclean/download/: target.rs
unclean/footer/: largescreen.rs
unclean/home/: promotion.rs
unclean/links/: footer.rs  largescreen.rs
unclean/notfound/: redirect.rs
unclean/search/: beta.rs  calendar.rs  celestial.rs  earth.rs  generic.rs
unclean/theme/: smallscreen.rs
unclean/tools/: configuration.rs  mainboard.rs
unclean/tools/mainboard/: celestial_date_session.rs  earth_tz_session.rs
unclean_wrappers/: date.rs  strings.rs  web.rs
