[package]
name = "zone-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# https://docs.rs/leptos/latest/leptos/
# https://book.leptos.dev/
leptos = { version = "0.5", features = ["csr"] }

# https://docs.rs/serde/latest/serde/
# https://serde.rs/field-attrs.html
serde = { version = "1.0", features = ["derive"] }

# https://docs.rs/serde-wasm-bindgen/latest/serde_wasm_bindgen/
# https://rustwasm.github.io/wasm-bindgen/reference/arbitrary-data-with-serde.html
serde-wasm-bindgen = "0.6"

# https://docs.rs/wasm-bindgen/latest/wasm_bindgen/
# https://rustwasm.github.io/wasm-bindgen/
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# https://docs.rs/wasm-bindgen-futures/0.4.39/wasm_bindgen_futures/
wasm-bindgen-futures = "0.4"

# https://docs.rs/js-sys/latest/js_sys/
js-sys = "0.3"

# https://docs.rs/chrono/latest/chrono/index.html
chrono = "0.4.31" 

# https://docs.rs/chrono-tz/latest/chrono_tz/
chrono-tz = "0.8.4"

# https://docs.rs/charming/latest/charming/struct.Chart.html
charming = { version = "0.3.1", features = ["wasm"] }

# https://leptos-use.rs/browser/ 
leptos-use = { version = "0.8.2", features = ["storage", "serde", "math"] }
leptos_meta = { version = "0.5.4", features = ["csr"] }
leptos_icons = {version = "0.1.0", features = ["BsSun", "BsMoonStars","FiMonitor"]}

[build-dependencies]
tokio = { version = "1", features = ["rt"] }
cargo-leptos = "0.1"
clap_builder = "4.4"
camino = "1.1"

[workspace]
members = ["src-tauri", "server"]

