[package]
name = "zone-ui"
version = "0.0.8"
description = "The user interface for cosmic calendar"
authors = ["Ethan", "ethan.a.thompson@outlook.com"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# https://docs.rs/leptos/latest/leptos/
# https://book.leptos.dev/
leptos = { version = "0.5", features = ["csr"] }

# https://docs.rs/serde/latest/serde/
# https://serde.rs/field-attrs.html
serde = { version = "1.0", features = ["derive"] }

# https://docs.rs/serde-wasm-bindgen/latest/serde_wasm_bindgen/
# https://rustwasm.github.io/wasm-bindgen/reference/arbitrary-data-with-serde.html
serde-wasm-bindgen = "0.6"

# https://docs.rs/wasm-bindgen/latest/wasm_bindgen/
# https://rustwasm.github.io/wasm-bindgen/
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# https://docs.rs/wasm-bindgen-futures/0.4.39/wasm_bindgen_futures/
wasm-bindgen-futures = "0.4"

# https://docs.rs/js-sys/latest/js_sys/
js-sys = "0.3"

# https://docs.rs/chrono/latest/chrono/index.html
chrono = "0.4.31"

# https://docs.rs/charming/latest/charming/struct.Chart.html
charming = { version = "0.3.1", features = ["wasm"] }

# https://leptos-use.rs/browser/ 
leptos_meta = { version = "0.5.4", features = ["csr"] }

# https://carlosted.github.io/icondata/
leptos_icons = { version = "0.1.0", features = [
  "BsSun",
  "BsMoonStars",
  "FiMonitor",
  "AiMenuOutlined",
  "AiCaretDownOutlined",
  "AiCaretUpOutlined",
  "BiCalendarRegular",
  "CgMenuGridR",
  "FiSearch",
  "AiArrowRightOutlined",
  "BiArrowBackRegular",
  "BiRightArrowSolid",
  "BiLeftArrowSolid",
  "BiRightArrowRegular",
  "BiLeftArrowRegular",
  "BsCloudArrowDown",
  "BiXRegular",
  "BiXCircleRegular",
  "AiCheckCircleOutlined",
  "BiCheckRegular",
  "BiDownloadSolid",
  "FaLinuxBrands",
  "SiArchlinux",
  "SiArtixlinux",
  "SiLinuxmint",
  "SiKalilinux",
  "AiWindowsFilled",
  "AiWindowsOutlined",
  "SiMacos",
  "AiSettingTwotone",
  "BiBookmarkRegular",
  "BiBookmarkSolid",
  "AiAppleFilled",
  "AiAppleOutlined",
  "AiAndroidOutlined",
  "AiAndroidFilled",
  "AiPlusOutlined",
  "AiMinusSquareOutlined",
  "AiPlusSquareOutlined",
  "RiDashboardSystemFill"
] }
leptos_router = { version = "0.5.4", features = ["csr"] }
tracing = "0.1.40"
ron = "0.8.1"
gloo-net = "0.5.0"
web-sys = { version = "0.3.66", features = ["CanvasRenderingContext2d"] }
leptos-use = { version = "0.9.0", features = ["serde", "serde_json"] }
chrono-tz = { version = "0.8.5", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
icu_calendar = "1.4.0"

[build-dependencies]
tokio = { version = "1", features = ["rt"] }
cargo-leptos = "0.1"
clap_builder = "4.4"
camino = "1.1"

[workspace]
resolver = "2"
members = ["src-tauri", "server"]
