[package]
name = "server"
version = "0.0.1"
edition = "2021"
description = "Server for the cosmic tool "
readme = "README.md"
authors = ["Ethan Thompson"]
license = 'MIT'

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.34.0"
tower-http = { version = "0.4.4", features = [ "fs"] }